# C_examples

./: 03_calcolo_resto_monete.c  03_resto_in_monete.c  03_ricerca_lineare.c  03_scorrimento_circolare.c  04_complemento2.c  04_frase_palindorma.c  04_nome_abbreviato.c  04_nome_abbreviato_prof.c  04_nomi_abbreviati.c  04_palindroma.c  04_strcatenate.c  04_strcatenate_sami.c  04_strcompare.c  04_strinvert.c  CMakeLists.txt  calcolo_resto_monete.c  converti_data.c  fgets_example.c  fscanf_example.c  hello_world.c  integer_io.c  leggi_vettore.c  scorrimento_circolare.c  strcatenate.c  strcompare.c  strinsert.c  test.c  test.txt
