cmake_minimum_required(VERSION 3.27)
project(C_exercise C)

set(CMAKE_C_STANDARD 11)

add_executable(C_exercise
        calcolo_resto_monete.c
        fgets_example.c
        fscanf_example.c
        hello_world.c
        integer_io.c
        leggi_vettore.c
        ricerca_lineare.c
        scorrimento_circolare.c
        test.c
        strcatenate.c
        sctrcatenate_sami.c)
